# LSAP

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  ruff.toml
python/: .gitignore  .ignore  AGENTS.md  justfile  lsp-client  main.py  pyproject.toml
python/docs/: locate_design.md
python/src/lsap/: abc.py  completion.py  definition.py  exception.py  hover.py  locate.py  outline.py  reference.py  rename.py  search.py  symbol.py  symbol_outline.py  workspace_symbol.py
python/src/lsap/draft/: __init__.py  completion.py  diagnostics.py
python/src/lsap/models/: abc.py  base.py  inlay.py  reference.py  symbol_path.py
python/src/lsap/protocol/: abc.py  inlay.py  locate.py  reference.py  symbol.py
python/src/lsap/utils/: __init__.py  cache.py  content.py  document.py  locate.py  lookup.py  model.py  (+3 more)
python/tests/: test_completion.py  test_content.py  test_definition.py  test_diagnostics.py  test_hover.py  test_inlay.py  test_locate.py  test_outline.py  test_reference.py  test_search.py  test_snippet.py  test_symbol.py  test_symbol_outline.py  test_workspace_symbol.py
schema/: AGENTS.md  DefinitionRequest.json  DefinitionResponse.json  DocRequest.json  HoverRequest.json  HoverResponse.json  InspectDetailInfo.json  InspectInfo.json  InspectRequest.json  InspectResponse.json  LineScope.json  Locate.json  LocateRange.json  LocateRangeRequest.json  LocateRangeResponse.json  LocateRequest.json  LocateResponse.json  OutlineRequest.json  OutlineResponse.json  ReferenceItem.json  ReferenceRequest.json  ReferenceResponse.json  RenameExecuteResponse.json  RenamePreviewRequest.json  RenamePreviewResponse.json  SearchRequest.json  SearchResponse.json  SymbolRequest.json  SymbolResponse.json  definition.request.json  definition.response.json  doc.request.json  explore.md  hover.md  hover.request.json  inspect.md  inspect.request.json  inspect.response.json  justfile  locate.md  (+13 more)
schema/docs/: liquid_cheatsheet.md  locate_design.md
schema/src/lsap_schema/: __init__.py  __main__.py  abc.py  call_hierarchy.py  completion.py  definition.py  diagnostics.py  hover.py  implementation.py  inlay_hint.py  locate.py  reference.py  rename.py  symbol.py  symbol_outline.py  type_hierarchy.py  types.py  workspace.py  workspace_symbol.py
schema/tests/: test_responses.py  test_templates.py
(+277 files in other folders)
