[project]
name = "lsap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.0",
    "asyncer>=0.0.11",
    "attrs>=25.4.0",
    "cattrs>=25.3.0",
    "lsap-schema",
    "lsp-client",
    "pydantic>=2.12.5",
    "python-liquid>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
lsap-schema = { git = "https://github.com/lsp-client/LSAP.git", subdirectory = "schema" }
lsp-client = { git = "https://github.com/lsp-client/python-sdk.git" }

[tool.uv.workspace]
members = [
    "packages/lsp-client",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
